--- a/qualtran/bloqs/qsp/fft_qsp.ipynb
+++ b/qualtran/bloqs/qsp/fft_qsp.ipynb
@@ -79,27 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a8af03e-7d3b-4111-9306-63ffb50e9f78",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m             xyz\u001b[38;5;241m.\u001b[39mappend([deg, modes, result])\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(xyz)\n\u001b[0;32m----> 8\u001b[0m xyz \u001b[38;5;241m=\u001b[39m \u001b[43mcomplimentary_polynomial_error_search\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m101\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43monly_real\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m, in \u001b[0;36mcomplimentary_polynomial_error_search\u001b[0;34m(degrees, only_real)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m deg \u001b[38;5;129;01min\u001b[39;00m degrees:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m modes \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m300\u001b[39m): \u001b[38;5;66;03m# Experimentally, at least 9 modes are needed to get an error within a \"ballpark\" tolerance.\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[43mcomplimentary_polynomial_with_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdeg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43monly_real_coeffs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43monly_real\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m         xyz\u001b[38;5;241m.\u001b[39mappend([deg, modes, result])\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(xyz)\n",
-      "Cell \u001b[0;32mIn[1], line 41\u001b[0m, in \u001b[0;36mcomplimentary_polynomial_with_check\u001b[0;34m(degree, min_modes, only_real_coeffs)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m only_real_coeffs:\n\u001b[1;32m     40\u001b[0m     np\u001b[38;5;241m.\u001b[39mtesting\u001b[38;5;241m.\u001b[39massert_allclose(np\u001b[38;5;241m.\u001b[39mimag(Q), \u001b[38;5;241m0\u001b[39m, atol\u001b[38;5;241m=\u001b[39mtolerance)\n\u001b[0;32m---> 41\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcheck_gqsp_polynomial_pair_on_random_points_on_unit_circle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m    \u001b[49m\u001b[43mP\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrandom_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_points\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\n\u001b[1;32m     43\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[1], line 28\u001b[0m, in \u001b[0;36mcheck_gqsp_polynomial_pair_on_random_points_on_unit_circle\u001b[0;34m(P, Q, random_state, n_points)\u001b[0m\n\u001b[1;32m     25\u001b[0m Q \u001b[38;5;241m=\u001b[39m Polynomial(Q)\n\u001b[1;32m     27\u001b[0m z \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(random_state\u001b[38;5;241m.\u001b[39mrandom(size\u001b[38;5;241m=\u001b[39mn_points) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39mj)\n\u001b[0;32m---> 28\u001b[0m unity \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(P(z)) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(\u001b[43mQ\u001b[49m\u001b[43m(\u001b[49m\u001b[43mz\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mabs\u001b[39m(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39munity))\n",
-      "File \u001b[0;32m~/miniconda3/envs/quantum/lib/python3.10/site-packages/numpy/polynomial/_polybase.py:513\u001b[0m, in \u001b[0;36mABCPolyBase.__call__\u001b[0;34m(self, arg)\u001b[0m\n\u001b[1;32m    511\u001b[0m off, scl \u001b[38;5;241m=\u001b[39m pu\u001b[38;5;241m.\u001b[39mmapparms(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdomain, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwindow)\n\u001b[1;32m    512\u001b[0m arg \u001b[38;5;241m=\u001b[39m off \u001b[38;5;241m+\u001b[39m scl\u001b[38;5;241m*\u001b[39marg\n\u001b[0;32m--> 513\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_val\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoef\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/quantum/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:756\u001b[0m, in \u001b[0;36mpolyval\u001b[0;34m(x, c, tensor)\u001b[0m\n\u001b[1;32m    754\u001b[0m c0 \u001b[38;5;241m=\u001b[39m c[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    755\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;28mlen\u001b[39m(c) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m--> 756\u001b[0m     c0 \u001b[38;5;241m=\u001b[39m c[\u001b[38;5;241m-\u001b[39mi] \u001b[38;5;241m+\u001b[39m c0\u001b[38;5;241m*\u001b[39mx\n\u001b[1;32m    757\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m c0\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def complimentary_polynomial_error_search(degrees:List[int], only_real:bool=False):\n",
     "    xyz = []\n",
@@ -129,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "de649c1a-d0f2-4f35-9402-4fee1e0e23f5",
    "metadata": {},
    "outputs": [
@@ -165,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "8c52f20e-c49b-4e33-b6af-1be33f2991f7",
    "metadata": {},
    "outputs": [
@@ -219,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "bba1cf22-079e-410a-a807-77c603f9fcbd",
    "metadata": {},
    "outputs": [
@@ -252,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "ae749082-12e1-4c0f-b9cf-90e6258d82d9",
    "metadata": {},
    "outputs": [
@@ -331,17 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "232307fa-11d9-4f42-aa0d-35a1fab81e01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2d169c8850>"
+       "<matplotlib.legend.Legend at 0x7f52ce2b2da0>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "6bc3f0e3-02ba-4dc6-bf8a-ea0d6ecf41df",
    "metadata": {},
    "outputs": [
@@ -397,7 +380,7 @@
        "Text(0.5, 1.0, 'Plot for degree: 40')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -432,27 +415,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "18a973c0-256a-4fd7-b35a-a7870e43eae2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'numpy' has no attribute 'flatten'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[91], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflatten\u001b[49m(xyz[degree,\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mshape\n",
-      "File \u001b[0;32m~/miniconda3/envs/quantum/lib/python3.10/site-packages/numpy/__init__.py:333\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    330\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRemoved in NumPy 1.25.0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    331\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTester was removed in NumPy 1.25.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 333\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    334\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;18m__name__\u001b[39m, attr))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'flatten'"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "e33ef625-f081-442e-83c6-38e930bbc1c1",
    "metadata": {},
@@ -462,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "2355b645-4527-44f4-93f3-7eaf5b429507",
    "metadata": {},
    "outputs": [
@@ -484,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "06434eb0-a78d-4a3e-9a3a-b6f8a9215e50",
    "metadata": {},
    "outputs": [
@@ -559,17 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "440c253f-1488-486d-807f-c7895fe4b13b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd28254e7d0>"
+       "<matplotlib.legend.Legend at 0x7f52b836bf70>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
